apps/base/blog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  namespace: apps
  labels:
    app: blog
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
        - name: blog
          image: wyson002/my-hugo-blog:v0.0.6 # {"$imagepolicy": "flux-system:hugo-policy"}
          ports:
            - containerPort: 80
