apps/base/blog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-service
  namespace: apps
spec:
  selector:
    app: blog
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
