apps/base/blog/ingress.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/traefik.io/ingressroute_v1alpha1.json
apiVersion: traefik.io.v1alpha1
kind: IngressRoute
metadata:
  name: blog-ingress
  namespace: apps
spec:
  entryPoints:
  - websecure
  routes:
    - match: Host(`blog.ysonsuperhomelab.com`)
      kind: Rule
      services:
        - name: blog-service
          port: 80
tls:
    secretName: blog-certificate-secret
